profile page added

--- a/src/main/resources/com/onriderentals/view/CustomerProfile.fxml
+++ b/src/main/resources/com/onriderentals/view/CustomerProfile.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.control.ScrollPane?>
 
 <VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.onriderentals.controller.CustomerProfileController" styleClass="root" stylesheets="@styles.css">
     <children>
