--- a/src/main/resources/com/onriderentals/view/AdminProfile.fxml
+++ b/src/main/resources/com/onriderentals/view/AdminProfile.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.ScrollPane?>
 
 <VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.onriderentals.controller.AdminProfileController" styleClass="root" stylesheets="@styles.css">
     <children>
